--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,8 +49,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="245dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="113dp"
+        android:layout_marginBottom="284dp"
         android:text="Notifications"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -60,8 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="174dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="158dp"
         android:text="Account"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -71,8 +73,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="171dp"
-        android:layout_marginBottom="114dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="103dp"
         android:text="Privacy"
         android:textSize="30dp"
         android:textStyle="bold" />
@@ -82,9 +84,20 @@
         android:layout_height="65dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="307dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="326dp"
         android:text="Favorites"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="187dp"
+        android:layout_marginBottom="218dp"
+        android:text="Settings"
         android:textSize="30dp"
         android:textStyle="bold" />
 
@@ -93,41 +106,51 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginBottom="8dp"
         android:text="Contact Developers"
         android:textSize="30dp"
         android:textStyle="bold" />
 
     <ImageView
-        android:layout_width="65dp"
-        android:layout_height="52dp"
+        android:layout_width="53dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="335dp"
-        android:layout_marginBottom="319dp"
+        android:layout_marginEnd="315dp"
+        android:layout_marginBottom="346dp"
         android:src="@drawable/heartcurb" />
 
     <ImageView
-        android:layout_width="65dp"
-        android:layout_height="52dp"
+        android:layout_width="53dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="337dp"
-        android:layout_marginBottom="241dp"
+        android:layout_marginEnd="316dp"
+        android:layout_marginBottom="285dp"
         android:src="@drawable/bellcurb" />
 
     <ImageView
-        android:layout_width="65dp"
-        android:layout_height="52dp"
+        android:layout_width="53dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="337dp"
-        android:layout_marginBottom="169dp"
+        android:layout_marginEnd="317dp"
+        android:layout_marginBottom="157dp"
         android:src="@drawable/headcurb" />
+
+    <ImageView
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="315dp"
+        android:layout_marginBottom="221dp"
+        android:src="@drawable/settingscurb" />
 
 
 </RelativeLayout>
