--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,12 +21,12 @@
 
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Jessica Bon Jovi"
-                android:textSize="21sp"
-                android:textStyle="bold" />
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
+            android:text="Jessica Bon Jovi"
+            android:textSize="21sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -151,6 +151,16 @@
         android:layout_marginEnd="315dp"
         android:layout_marginBottom="221dp"
         android:src="@drawable/settingscurb" />
+
+    <ImageView
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="315dp"
+        android:layout_marginBottom="106dp"
+        android:src="@drawable/lockcubrb" />
 
 
 </RelativeLayout>
