--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MainActivity">
+
+<TextView
+    android:id="@+id/tv_title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/app_name"
+    android:textSize="50sp"
+    android:layout_marginStart="25dp"
+    android:layout_marginBottom="10dp"
+    android:layout_above="@id/tv_subtitle"/>
+
+<TextView
+    android:id="@+id/tv_subtitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/tag"
+    android:textSize="17sp"
+    android:layout_marginStart="25dp"
+    android:layout_marginBottom="50dp"
+    android:layout_above="@id/et_email"/>
+
+<EditText
+    android:id="@+id/et_email"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".MainActivity">
+    android:layout_height="50dp"
+    android:hint="@string/e_mail"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:padding="15dp"
+    android:inputType="textEmailAddress"
+    android:layout_above="@id/et_password"
+    android:background="@drawable/et_custom"
+    android:textSize="15sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<EditText
+    android:id="@+id/et_password"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:hint="@string/password"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
+    android:padding="15dp"
+    android:inputType="textPassword"
+    android:layout_centerInParent="true"
+    android:background="@drawable/et_custom"
+    android:textSize="15sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<Button
+    android:id="@+id/btn_login"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/et_password"
+    android:background="@drawable/btn_custom"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="15dp"
+    android:textColor="@android:color/white"
+    android:text="@string/login"/>
+</RelativeLayout>
+
