--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -3,10 +3,10 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary"/>
+        android:color="@color/startblue"/>
 
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="@color/graylight"/>
 
     <padding
         android:left="5dp"
