--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/graylight"
     android:textColor="@color/colorPrimaryDark"
     tools:context=".Notifications">
 
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/rounded_corner"
-        android:background="@color/colorPrimary"
+        android:background="@color/graylight"
         tools:layout_editor_absoluteX="11dp"
         tools:layout_editor_absoluteY="14dp" />
 
