incorporated files from Gus

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile"
+    android:layout_alignParentLeft="true"
+    android:background="@color/graylight"
     android:orientation="vertical"
-    android:background="@color/graylight">
-    <LinearLayout
-            android:background="@drawable/gradientbackground"
-            android:layout_width="match_parent"
-            android:layout_height="279dp"
-            android:orientation="vertical">
+    tools:context=".Profile">
 
-            <ImageView
-                android:layout_width="202dp"
-                android:layout_height="179dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/curb"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradientbackground"
+        android:orientation="vertical"
+        tools:layout_conversion_absoluteHeight="279dp"
+        tools:layout_conversion_absoluteWidth="411dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <ImageView
+            android:layout_width="202dp"
+            android:layout_height="179dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/curb" />
 
 
         <TextView
@@ -42,132 +49,124 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="188dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="113dp"
-        android:layout_marginBottom="284dp"
         android:text="Notifications"
         android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="158dp"
-        android:text="Account"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="157dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="103dp"
-        android:text="Privacy"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="215dp"
-        android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="87dp"
-        android:layout_marginBottom="326dp"
-        android:text="Favorites"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="41dp"
+        tools:layout_conversion_absoluteWidth="188dp"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="406dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="187dp"
-        android:layout_marginBottom="218dp"
-        android:text="Settings"
+        android:text="Account"
         android:textSize="30dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="41dp"
+        tools:layout_conversion_absoluteWidth="170dp"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="532dp" />
 
     <TextView
-        android:layout_width="224dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="8dp"
+        android:text="Privacy"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="41dp"
+        tools:layout_conversion_absoluteWidth="157dp"
+        tools:layout_editor_absoluteX="112dp"
+        tools:layout_editor_absoluteY="587dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favorites"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="65dp"
+        tools:layout_conversion_absoluteWidth="215dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="41dp"
+        tools:layout_conversion_absoluteWidth="114dp"
+        tools:layout_editor_absoluteX="111dp"
+        tools:layout_editor_absoluteY="472dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Contact Developers"
         android:textSize="30dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:layout_conversion_absoluteHeight="77dp"
+        tools:layout_conversion_absoluteWidth="224dp"
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="646dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="315dp"
-        android:layout_marginBottom="346dp"
-        android:src="@drawable/heartcurb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/heartcurb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="346dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="316dp"
-        android:layout_marginBottom="285dp"
-        android:src="@drawable/bellcurb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bellcurb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="406dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="157dp"
-        android:src="@drawable/headcurb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/headcurb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="534dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="315dp"
-        android:layout_marginBottom="221dp"
-        android:src="@drawable/settingscurb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/settingscurb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="470dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="315dp"
-        android:layout_marginBottom="106dp"
-        android:src="@drawable/lockcubrb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/lockcubrb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="586dp" />
 
     <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="312dp"
-        android:layout_marginBottom="33dp"
-        android:src="@drawable/phonecurb" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/phonecurb"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="53dp"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="658dp" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
