--- a/app/src/main/res/layout/activity_contact_developers.xml
+++ b/app/src/main/res/layout/activity_contact_developers.xml
@@ -1,95 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactDevelopers">
-
-    <androidx.fragment.app.FragmentContainerVie
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginBottom="420dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#ffffff"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Contact Developers" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="44dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#fbb126"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="jmorro@iu.edu" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#fbb126"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="612dp"
-        tools:text="nvanfoss@iu.edu" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="56dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#fbb126"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="gserrani@iu.edu" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="52dp"
-        android:lineSpacingExtra="2sp"
-        android:textColor="#fbb126"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="mashment@iu.edu" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    tools:context=".Profile"
+    android:orientation="vertical"
+    android:background="@color/graylight">
+    <LinearLayout
+        android:background="@drawable/gradientbackground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:textAlignment="center"
-        tools:text="Contact Developers"
-        tools:textColor="#ffffff"/>
+        android:layout_height="279dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="380dp"
+            android:layout_height="246dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/curblogo" />
+
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="303dp"
+        android:layout_height="65dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="353dp"
+        android:text="masonashment@gmail.com"
+        android:textSize="24dp"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="436dp"
-        android:layout_height="193dp"
-        app:srcCompat="@drawable/headcurb"
-        tools:layout_editor_absoluteX="-13dp"
-        tools:layout_editor_absoluteY="143dp" />
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="333dp"
+        android:layout_marginBottom="383dp"
+        android:src="@drawable/email" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="320dp"
+        android:layout_height="71dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="290dp"
+        android:text="nickvanfossen93@gmail.com"
+        android:textSize="23dp"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="333dp"
+        android:layout_marginBottom="323dp"
+        android:src="@drawable/email" />
+
+    <TextView
+        android:layout_width="303dp"
+        android:layout_height="65dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="239dp"
+        android:text="joemorro@iu.edu"
+        android:textColor="#000000"
+        android:textSize="27dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="333dp"
+        android:layout_marginBottom="266dp"
+        android:src="@drawable/email" />
+
+    <TextView
+        android:layout_width="303dp"
+        android:layout_height="65dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="188dp"
+        android:text="gserrani@iu.edu"
+        android:textSize="27dp"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="53dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="333dp"
+        android:layout_marginBottom="210dp"
+        android:src="@drawable/email" />
+
+    <ImageView
+        android:layout_width="72dp"
+        android:layout_height="56dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="322dp"
+        android:layout_marginBottom="126dp"
+        android:src="@drawable/phonecurb" />
+
+    <TextView
+        android:layout_width="303dp"
+        android:layout_height="65dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="115dp"
+        android:text="(406) 208-2485"
+        android:textColor="#000000"
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="72dp"
+        android:layout_height="56dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="320dp"
+        android:layout_marginBottom="54dp"
+        android:src="@drawable/phonecurb" />
+
+    <TextView
+        android:layout_width="303dp"
+        android:layout_height="65dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="32dp"
+        android:text="(317) 965-4505"
+        android:textColor="#000000"
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
+
+</RelativeLayout>
