--- a/app/src/main/res/layout/activity_emaildev.xml
+++ b/app/src/main/res/layout/activity_emaildev.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".Emaildev">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="To:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <EditText
         android:id="@+id/edit_text_to"
