--- a/app/src/main/res/layout/home_truck_card.xml
+++ b/app/src/main/res/layout/home_truck_card.xml
@@ -6,7 +6,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="50dp">
+    android:padding="50dp"
+    android:elevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -55,6 +56,7 @@
             app:layout_constraintStart_toStartOf="@+id/companyNameTextView"
             app:layout_constraintTop_toBottomOf="@+id/companyNameTextView"
             tools:text="8:00am-9:00pm" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
