--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,79 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".MainActivity">
-
-<TextView
-    android:id="@+id/tv_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/app_name"
-    android:textSize="50sp"
-    android:layout_marginStart="25dp"
-    android:layout_marginBottom="10dp"
-    android:layout_above="@id/tv_subtitle"/>
-
-<TextView
-    android:id="@+id/tv_subtitle"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/tag"
-    android:textSize="17sp"
-    android:layout_marginStart="25dp"
-    android:layout_marginBottom="50dp"
-    android:layout_above="@id/et_email"/>
-
-<EditText
-    android:id="@+id/et_email"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout3"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:hint="@string/e_mail"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:padding="15dp"
-    android:inputType="textEmailAddress"
-    android:layout_above="@id/et_password"
-    android:background="@drawable/et_custom"
-    android:textSize="15sp" />
+    android:layout_height="match_parent"
+    android:padding="20dp"
+    tools:context=".MainActivity">
 
-<EditText
-    android:id="@+id/et_password"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:hint="@string/password"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginTop="10dp"
-    android:padding="15dp"
-    android:inputType="textPassword"
-    android:layout_centerInParent="true"
-    android:background="@drawable/et_custom"
-    android:textSize="15sp" />
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/app_name"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
+        app:layout_constraintStart_toStartOf="@+id/tv_subtitle" />
 
-<Button
-    android:id="@+id/btn_login"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/et_password"
-    android:background="@drawable/btn_custom"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginTop="15dp"
-    android:textColor="@android:color/white"
-    android:text="@string/login"/>
+    <TextView
+        android:id="@+id/tv_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/tag"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_google_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_login"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
-        android:text="Sign In with Google" />
+        android:layout_marginTop="24dp"
+        android:text="Sign In with Google"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/vendorButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Sign in as Vendor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_google_signin" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
