added a button to home

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -75,5 +75,14 @@
         app:layout_constraintStart_toEndOf="@+id/sv_location"
         app:layout_constraintTop_toTopOf="@+id/sv_location" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="48dp"
+        android:text="V"
+        app:layout_constraintStart_toStartOf="@+id/menuButton"
+        app:layout_constraintTop_toBottomOf="@+id/menuButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
